kubernetes-cluster/gke/ingress/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-metrics
  namespace: istio-stystem
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: /prometheus/?(.*)
        backend:
          service:
            name: kube-prometheus-stack-prometheus-node-exporter
            port: 
              number: 9100  
      - pathType: Prefix
        path: /alertmanager/?(.*)
        backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port: 
              number: 9093   
      - pathType: Prefix
        path: /grafana/?(.*)
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port: 
              number: 80
